# DINOZAUR

./: .gitignore  README.md  example.ipynb  fit_laplace_approximation.py  pyproject.toml  train.py
config/ahmed_bodies/: dinozaur.yml  dinozaur_no_g.yml  gino.yml  gino_g.yml  tgino.yml  tgino_g.yml
config/darcy/: dinozaur.yml  dinozaur_no_g.yml  fno.yml  fno_g.yml  tfno.yml  tfno_g.yml
config/navier_stokes/: dinozaur.yml  dinozaur_no_g.yml  fno.yml  fno_g.yml  tfno.yml  tfno_g.yml
config/shapenetcar/: dinozaur.yml  dinozaur_no_g.yml  gino.yml  gino_g.yml  tgino.yml  tgino_g.yml
config/shapenetcar/probabilistic/: dinozaur_bayesian.yml  dinozaur_dropout.yml  gino_dropout.yml  tgino_dropout.yml
src/dinozaur/: __init__.py
src/dinozaur/models/: __init__.py  bayesian_dinozaur_d.py  dinozaur.py  dinozaur_d.py  fno.py  gino_d.py  utils.py
src/dinozaur/models/layers/: __init__.py  blocks.py  fourier_convolution.py  local_integral.py  mlp.py  multipliers.py  padding.py  positional_encoding.py
src/dinozaur/training/: __init__.py  dataset.py  losses.py  metrics.py  scalers.py  trainer.py
